--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,4 +4,12 @@ mccabe==0.6.1
 pycodestyle==2.6.0
 pyflakes==2.2.0
 zipp==3.1.0
+
+# Deps do pytest
+more-itertools==4.0.0
+py==1.8.2
+attrs==17.4.0
+pluggy<1.0,>=0.12
+toml
+iniconfig
 -r requirements.txt
