--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: python
 python:
   - 3.6
 install:
-  - pip install -q -r requirements-dev.txt codecov
+  - pip install -r requirements-dev.txt
 script:
   - flake8
-  - pytest libpythonpro --cov=libpythonpro
-after_success:
-  - codecov
+  - pytest ./test
