--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ install:
   - pip install -r requirements-dev.txt
 script:
   - flake8
-  - pytest libpythonpro/tests
+  - pytest
+after_success:
+  - codecov
